--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 
 <body>
-  Hello world
+  <h1>arena mortal</h1>
+
+  
+<p><img src="https://media.fstatic.com/yUvuOT-NmEgDiQPTowaIM0LCk-Q=/322x478/smart/filters:format(webp)/media/movies/covers/2024/07/MV5BMmYzYmZmOGYtMThlNi00OTEzLTk1NmEtOGIxNThmMzRhMTFhXkEyXkFqcGdeQX_0KXMhE7.jpg"
+  
+</p>
+  
+
+  <h2>sinopse</h2>
+<p>Em 2045, criminosos condenados têm a oportunidade de competir no evento esportivo televisionado número um do mundo, o Arena Wars. Eles devem sobreviver sete dos assassinos mais cruéis do país. Se vencerem, recuperam a liberdade.</p>
+
+  <h3>critica</h3>
+
+  o fime e muito bom com otima qualidade de imagem e som que me acadaram muito
+  
   <script src="script.js"></script>
 </body>
 
